--- a/views/login/login.html
+++ b/views/login/login.html
@@ -46,10 +46,13 @@
         <div ng-show="vm.response" class="alert alert-danger">{{vm.response}}</div>
 
     </form>
+    <button ng-click="vm.login()" class="btn blue pull-right">
+        LoginX <i class="m-icon-swapright m-icon-white"></i>
+    </button>
     <!-- END LOGIN FORM -->
     <!-- BEGIN FORGOT PASSWORD FORM -->
 
     <!-- END REGISTRATION FORM -->
-<!-- END LOGIN -->
-<!-- BEGIN COPYRIGHT -->
+    <!-- END LOGIN -->
+    <!-- BEGIN COPYRIGHT -->
 </div>
