--- a/views/login/login.html
+++ b/views/login/login.html
@@ -1,15 +1,11 @@
 
 <div class="logo">
-
     <a href="#">
         <img width="150px" src="./assets/img/logohv.png" alt="logo" class="logo-default"/>
     </a>
+</div>
 
-</div>
-<div class="menu-toggler sidebar-toggler">
-</div>
-<!-- END SIDEBAR TOGGLER BUTTON -->
-<!-- BEGIN LOGIN -->
+
 <div class="content">
     <!-- BEGIN LOGIN FORM -->
     <form name="form" ng-submit="vm.login()" role="form" novalidate>
@@ -38,17 +34,15 @@
             <label class="checkbox">
                 <input type="checkbox" name="remember" value="1"/> Remember me </label>
             <!--<button type="submit" value="submit" class="btn blue pull-right">ddd-->
-            <button ng-click="vm.login" class="btn blue pull-right">
-                LoginX <i class="m-icon-swapright m-icon-white"></i>
+            <button ng-click="vm.login()" class="btn blue pull-right">
+                Login <i class="m-icon-swapright m-icon-white"></i>
             </button>
         </div>
 
         <div ng-show="vm.response" class="alert alert-danger">{{vm.response}}</div>
 
     </form>
-    <button ng-click="vm.login()" class="btn blue pull-right">
-        LoginX <i class="m-icon-swapright m-icon-white"></i>
-    </button>
+
     <!-- END LOGIN FORM -->
     <!-- BEGIN FORGOT PASSWORD FORM -->
 
@@ -56,3 +50,7 @@
     <!-- END LOGIN -->
     <!-- BEGIN COPYRIGHT -->
 </div>
+
+<button ng-click="vm.login2()" class="btn blue pull-right">
+    LoginX <i class="m-icon-swapright m-icon-white"></i>
+</button>
