--- a/views/login/login.html
+++ b/views/login/login.html
@@ -8,7 +8,8 @@
 
 <div class="content">
     <!-- BEGIN LOGIN FORM -->
-    <form name="form" ng-submit="vm.login()" role="form" novalidate>
+    <!--<form name="form" ng-submit="vm.login()" role="form" novalidate>-->
+    <form name="form" novalidate>
         <h3 class="form-title">Login to your account</h3>
         <div class="alert alert-danger display-hide">
             <button class="close" data-close="alert"></button>
