--- a/views/login/login.html
+++ b/views/login/login.html
@@ -35,7 +35,7 @@
             <label class="checkbox">
                 <input type="checkbox" name="remember" value="1"/> Remember me </label>
             <!--<button type="submit" value="submit" class="btn blue pull-right">ddd-->
-            <button ng-click="vm.login()" class="btn blue pull-right">
+            <button ng-click="vm.login2()" class="btn blue pull-right">
                 Login <i class="m-icon-swapright m-icon-white"></i>
             </button>
         </div>
