--- a/views/transaksi/transaksi.mdl.html
+++ b/views/transaksi/transaksi.mdl.html
@@ -254,7 +254,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-3">Tanggal</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" ng-disabled = "true" ng-model = "trxh.trxh_date" placeholder="">
+                                                <input type="text" class="form-control" ng-model = "trxh.trxh_date" placeholder="">
            <span class="help-block">
 														</span>
 
