--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1736,7 +1736,7 @@
 <!-- END MAIN CONTENT -->
 <!-- BEGIN MAIN JS & CSS -->
 <script>
-	Index.init();
-	Tasks.initDashboardWidget();
+	//Index.init();
+	//Tasks.initDashboardWidget();
 </script>
 <!-- BEGIN MAIN JS & CSS -->
