--- a/views/transaksi/transaksi.mdl.html
+++ b/views/transaksi/transaksi.mdl.html
@@ -429,7 +429,7 @@
 <div class="modal-footer">
     <button type="button" class="btn blue" ng-click = "print()">Print</button>
     <button type="button" class="btn green" ng-click = "post()" data-dismiss="modal">Post</button>
-    <button type="button" class="btn default" ng-click = "saveClose()"data-dismiss="modal">Save & Close</button>
+    <button type="button" class="btn default" ng-click = "saveClose()"data-dismiss="modal">Close</button>
 
 </div>
 
