--- a/views/transaksi/transaksi.mdl.html
+++ b/views/transaksi/transaksi.mdl.html
@@ -62,6 +62,8 @@
                                                     <label class="btn btn-warning" ng-model="nasabah.idtype" btn-radio="'Passpor'">Passpor</label>
                                                     <label class="btn btn-warning" ng-model="nasabah.idtype" btn-radio="'SIM'">SIM</label>
                                                     <label class="btn btn-warning" ng-model="nasabah.idtype" btn-radio="'SIUP'">SIUP</label>
+                                                    <label class="btn btn-warning" ng-model="nasabah.idtype" btn-radio="'MC'">MC</label>
+                                                    <label class="btn btn-warning" ng-model="nasabah.idtype" btn-radio="'Bank'">BANK</label>
 
 
                                                 </div>
@@ -91,7 +93,8 @@
                                                 <div class="btn-group">
                                                     <label class="btn btn-info" ng-model="nasabah.jenis" btn-radio="'Individu'">Individu</label>
                                                     <label class="btn btn-info" ng-model="nasabah.jenis" btn-radio="'Perusahaan'">Perusahaan</label>
-
+                                                    <label class="btn btn-info" ng-model="nasabah.jenis" btn-radio="'MC'">Money Changer</label>
+                                                    <label class="btn btn-info" ng-model="nasabah.jenis" btn-radio="'Bank'">Bank</label>
                                                 </div>
                                             </div>
                                         </div>
