--- a/views/transaksi/transaksi.mdl.html
+++ b/views/transaksi/transaksi.mdl.html
@@ -173,6 +173,8 @@
                                     <!--/span-->
                                 </div>
 
+
+
                                 <h3 class="form-section">Alamat</h3>
                                 <!--/row-->
                                 <div class="row">
@@ -193,6 +195,28 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <h3 class="form-section">Jumlah transaksi</h3>
+                                <!--/row-->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3">Beli</label>
+                                            <div class="col-md-9">
+                                                <input type="text" fcsa-number="{ }" ng-disabled="disableForm" class="form-control" ng-model="nasabah.beli">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3">Jual</label>
+                                            <div class="col-md-9">
+                                                <input type="text" fcsa-number="{ }" ng-disabled="disableForm" class="form-control" ng-model="nasabah.jual">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
 
                             </div>
 
