--- a/views/nasabah/nasabah.mdl.html
+++ b/views/nasabah/nasabah.mdl.html
@@ -160,7 +160,7 @@
                                         <!--/span-->
                                     </div>
 
-                                    <h3 class="form-section">Alamat</h3>
+                                    <h3 class="form-section">Alamat2</h3>
                                     <!--/row-->
                                     <div class="row">
                                         <div class="col-md-6">
@@ -181,6 +181,26 @@
                                         </div>
                                     </div>
 
+                                    <h3 class="form-section">Jumlah transaksi</h3>
+                                    <!--/row-->
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="control-label col-md-3">Beli</label>
+                                                <div class="col-md-9">
+                                                    <input type="text" fcsa-number="{ }" ng-disabled="disableForm" class="form-control" ng-model="nasabah.beli">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="control-label col-md-3">Jual</label>
+                                                <div class="col-md-9">
+                                                    <input type="text" fcsa-number="{ }" ng-disabled="disableForm" class="form-control" ng-model="nasabah.jual">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
 
 
