--- a/views/transaksi/transaksi.html
+++ b/views/transaksi/transaksi.html
@@ -23,8 +23,11 @@
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxmenu.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxcombobox.js"></script>
+<script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxdropdownlist.js"></script>
+<script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxlistbox.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxlistbox.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.edit.js"></script>
+<script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.filter.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.aggregates.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.selection.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.columnsresize.js"></script>
