--- a/views/pecahan/pecahan.html
+++ b/views/pecahan/pecahan.html
@@ -31,6 +31,11 @@
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.selection.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.columnsresize.js"></script>
  <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxdata.js"></script>
+ <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.filter.js"></script>
+ <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxdropdownlist.js"></script>
+ <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxlistbox.js"></script>
+    <script type="text/javascript" src="./assets/global/plugins/jqwidgets/jqxgrid.sort.js"></script>
+
  <script type="text/javascript">
 
   $(document).ready(function () {
