--- a/views/nasabah/nasabah.html
+++ b/views/nasabah/nasabah.html
@@ -8,8 +8,8 @@
    <!-- Collect the nav links, forms, and other content for toggling -->
 
     <div class="navbar-form navbar-left">
-    <!-- <button ng-click="addData()" class="btn blue">+ Tambah</button>
-     <button ng-click="deleteData()" class="btn red">- Hapus</button> -->
+    <!-- <button ng-click="addData()" class="btn blue">+ Tambah</button> -->
+     <button ng-click="printID()" class="btn blue">Print ID</button>
      <button ng-click="refreshData()" class="btn green">Refresh</button>
     </div>
 
