--- a/views/transaksi/transaksi.mdl.html
+++ b/views/transaksi/transaksi.mdl.html
@@ -351,7 +351,13 @@
                                     <!--/span-->
                                     <div class="col-md-6">
                                         <div class="form-group">
-
+                                            <label class="control-label col-md-3">Branch ID</label>
+                                            <div class="col-md-9">
+                                                <div class="btn-group">
+                                                    <label class="btn blue" ng-model="trxh.branch_id"  btn-radio="'BSG01'">BSG01</label>
+                                                    <label class="btn blue" ng-model="trxh.branch_id"  btn-radio="'ITC01'">ITC01</label>
+                                                </div>
+                                            </div>
                                         </div>
 
                                     </div>
