--- a/views/nasabah/nasabah.html
+++ b/views/nasabah/nasabah.html
@@ -9,7 +9,7 @@
 
     <div class="navbar-form navbar-left">
     <!-- <button ng-click="addData()" class="btn blue">+ Tambah</button> -->
-     <button ng-click="printID()" class="btn blue">Print ID</button>
+     <button ng-click="vm.test()" class="btn blue">Print ID</button>
      <button ng-click="refreshData()" class="btn green">Refresh</button>
     </div>
 
